# libra

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
evaluation/: golden.json  judge.py  metrics.py  runner.py  trace.py
evaluation/prompts/: faithfulness.md  task_success.md
evaluation/reports/: sample_eval_report.json
prompts/: executor.md  planner.md  synthesize.md
src/: cli.py  config.py  logging.py  models.py  store.py
src/agent/: context.py  executor.py  loop.py  planner.py  run.py  synthesizer.py
src/llm/: client.py
src/tools/: academic_search.py  doc_search.py  fetch.py  registry.py  web_search.py
tests/: conftest.py  test_context.py  test_executor.py  test_loop.py  test_models.py  test_planner.py  test_store.py
transcripts/: example_session.md
