[project]
name = "libra"
version = "0.1.0"
description = "Framework-free research agent: goal → plan → execute → brief"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "trafilatura>=1.11.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "ddgs>=9.14.4",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
